--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@azure/identity": "3.1.3",
+    "@microsoft/microsoft-graph-client": "3.0.4",
     "@nestjs/common": "9.3.8",
     "@nestjs/core": "9.3.8",
     "@nestjs/platform-express": "9.3.8",
@@ -28,6 +30,7 @@
     "rxjs": "7.8.0"
   },
   "devDependencies": {
+    "@microsoft/microsoft-graph-types": "^2.25.0",
     "@nestjs/cli": "9.2.0",
     "@nestjs/config": "2.3.1",
     "@nestjs/schematics": "9.0.4",
