--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "9.3.8",
     "@nestjs/platform-express": "9.3.8",
     "googleapis": "111.0.0",
+    "got": "11.8.3",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0"
   },
