--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "9.3.8",
     "googleapis": "111.0.0",
     "got": "11.8.3",
+    "nanoid": "3.3.4",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0"
   },
