--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "9.3.8",
     "@nestjs/core": "9.3.8",
     "@nestjs/platform-express": "9.3.8",
+    "date-fns": "2.29.3",
     "googleapis": "111.0.0",
     "got": "11.8.3",
     "nanoid": "3.3.4",
