--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "2.29.3",
     "googleapis": "111.0.0",
     "got": "11.8.3",
+    "lodash": "4.17.21",
     "nanoid": "3.3.4",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0"
@@ -41,6 +42,7 @@
     "@nestjs/testing": "9.3.8",
     "@types/express": "4.17.17",
     "@types/jest": "29.4.0",
+    "@types/lodash": "4.14.194",
     "@types/node": "18.13.0",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.51.0",
